--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Edit.cshtml
@@ -1,16 +1,17 @@
 ﻿@model ClientPortal.Web.Models.GoalVM
 @{
     List<ClientPortal.Data.Contexts.CakeOffer> offers = ViewBag.Offers;
+    bool isNewGoal = Model.Id < 0;
 }
 
 <div id="editGoalWrapper">
-    @using (Ajax.BeginForm(new AjaxOptions {Url = Url.Action("Save"), HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "editGoalWrapper", OnSuccess = "EditGoalSuccess"}))
+    @using (Ajax.BeginForm(new AjaxOptions { Url = Url.Action("Save"), HttpMethod = "POST", InsertionMode = InsertionMode.Replace, UpdateTargetId = "editGoalWrapper", OnSuccess = "RefreshGoalsAndCloseWindow" }))
     {
         @Html.HiddenFor(model => model.Id)
         @Html.ValidationSummary(true)
 
         <fieldset>
-            <legend>Goal</legend>
+            <legend>@(isNewGoal ? "Add" : "Edit") Goal</legend>
 
             <div class="editor-label">
                 @Html.LabelFor(model => model.Name)
@@ -24,7 +25,7 @@
                 @Html.LabelFor(model => model.TypeId)
             </div>
             <div class="editor-field">
-                @Html.DropDownListFor(model => model.TypeId, new SelectList(Enum.GetValues(typeof(ClientPortal.Web.Models.GoalTypeEnum))))
+                @Html.DropDownListFor(model => model.TypeId, new SelectList(Enum.GetValues(typeof(ClientPortal.Web.Models.GoalTypeEnum))), new { style = "width:auto" })
                 @Html.ValidationMessageFor(model => model.TypeId)
             </div>
 
@@ -40,7 +41,7 @@
                 @Html.LabelFor(model => model.MetricId)
             </div>
             <div class="editor-field">
-                @Html.DropDownListFor(model => model.MetricId, new SelectList(Enum.GetValues(typeof(ClientPortal.Web.Models.MetricEnum))))
+                @Html.DropDownListFor(model => model.MetricId, new SelectList(Enum.GetValues(typeof(ClientPortal.Web.Models.MetricEnum))), new { style = "width:auto" })
                 @Html.ValidationMessageFor(model => model.MetricId)
             </div>
 
@@ -52,9 +53,14 @@
                 @Html.ValidationMessageFor(model => model.Target)
             </div>
 
-            <p>
+            <div style="float:left">
                 <input type="submit" value="Save" />
-            </p>
+            </div>
+            <div style="float:right">
+                @if (!isNewGoal) {
+                <input type="button" value="Delete" onclick="DeleteGoal(@Model.Id, true)" />
+                }
+            </div>
         </fieldset>
     }
 </div>
