include last month-to-date in goal chart; seed goals; tweaks

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Item.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Goals/Item.cshtml
@@ -3,8 +3,8 @@
 <tr>
     <td><a href="#" onclick="EditGoal(@Model.Id); return false">Edit</a></td>
     <td>@Model.Name</td>
-    <td>@Model.TypeId</td>
     <td>@Model.OfferName</td>
     <td>@Model.MetricId</td>
-    <td>@Model.Target</td>
+    <td>@Model.TypeId</td>
+    <td>@Model.TargetFormatted</td>
 </tr>
