--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/GoalVis.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/GoalVis.cshtml
@@ -28,7 +28,7 @@
                 labels: { format: valueFormat }
             },
             categoryAxis: {
-                categories: ["Last Month", "This Month to-date", "Goal"]
+                categories: ["Last Month-to-Date", "Last Month-Total", "This Month-to-Date", "Goal"]
             },
             tooltip: {
                 visible: true,
