--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -49,13 +49,14 @@
         for (var i=0; i < offersum.Goals.Count; i++)
         {
             var goal = offersum.Goals[i];
+            var dataLastMonthToDate = goal.ValueFor(offersum.SummaryLMTD);
+            var dataLastMonthTotal = goal.ValueFor(offersum.SummaryLM);
+            var dataThisMonthToDate = goal.ValueFor(offersum.SummaryMTD);
             var dataGoal = goal.TargetBasedOn(offersum.SummaryLM);
-            var dataLastMonth = goal.ValueFor(offersum.SummaryLM);
-            var dataThisMonth = goal.ValueFor(offersum.SummaryMTD);
             var valueFormat = (goal.MetricId == ClientPortal.Web.Models.MetricEnum.Spend ? "C" : "N0");
             var goalString = "Goal: [" + goal.MetricId + ": " + goal.TargetFormattedBasedOn(offersum.SummaryLM) + "]";
             var heading = offersum.Offer.OfferName.Replace("'", "");
-            var createChartCall = "CreateChart('" +goal.MetricId+ "', [" +dataLastMonth+ ", " +dataThisMonth+ ", " +dataGoal+ "], '" +valueFormat+ "', '" +goal.Culture+ "', '" +goalString+ "', '" +heading+ "')";
+            var createChartCall = "CreateChart('" +goal.MetricId+ "', [" +dataLastMonthToDate+ "," +dataLastMonthTotal+ "," +dataThisMonthToDate+ "," +dataGoal+ "], '" +valueFormat+ "', '" +goal.Culture+ "', '" +goalString+ "', '" +heading+ "')";
             if (firstCreateChartCall == null) { firstCreateChartCall = createChartCall; }
 
             @goalString
