--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Dashboard.cshtml
@@ -1,88 +1,77 @@
 ﻿@model ClientPortal.Web.Models.DashboardModel
-
-<h2>Dashboard</h2>
-
-<div class="row">
-    <div class="panel six columns">
-        <h4>Summary</h4>
-        <table>
-            <tr>
-                <th></th>
-                <th>Clicks</th>
-                <th>Leads</th>
-                <th>Spend</th>
-            </tr>
-        @foreach (var summary in Model.AdvertiserSummaries)
-        {
-            <tr>
-                <td>@summary.Name</td>
-                <td>@String.Format("{0:n0}", summary.Clicks)</td>
-                <td>@String.Format("{0:n0}", summary.Conversions)</td>
-                <td>@summary.RevenueFormatted</td>
-            </tr>
-        }
-        </table>
-    </div>
-
-    <div class="panel five columns">
-        <table>
-            <tr>
-                <td>
-        Direct Agents<br />
-        info 1<br />
-        info 2
-                </td>
-            </tr>
-        </table>
-    </div>
-</div>
-
 @{
     string firstCreateChartCall = null;
 }
-<div class="row">
-    <div class="panel six columns">
-        <h4>Offers / Goals</h4>
-    @foreach (var offersum in Model.OfferGoalSummaries)
-    {
-        <b>@offersum.Offer.OfferName</b><br />
-        for (var i=0; i < offersum.Goals.Count; i++)
-        {
-            var goal = offersum.Goals[i];
-            var dataLastMonthToDate = goal.ValueFor(offersum.SummaryLMTD);
-            var dataLastMonthTotal = goal.ValueFor(offersum.SummaryLM);
-            var dataThisMonthToDate = goal.ValueFor(offersum.SummaryMTD);
-            var dataGoal = goal.TargetBasedOn(offersum.SummaryLM);
-            var valueFormat = (goal.MetricId == ClientPortal.Web.Models.MetricEnum.Spend ? "C" : "N0");
-            var goalString = "Goal: [" + goal.MetricId + ": " + goal.TargetFormattedBasedOn(offersum.SummaryLM) + "]";
-            var heading = offersum.Offer.OfferName.Replace("'", "");
-            var createChartCall = "CreateChart('" +goal.MetricId+ "', [" +dataLastMonthToDate+ "," +dataLastMonthTotal+ "," +dataThisMonthToDate+ "," +dataGoal+ "], '" +valueFormat+ "', '" +goal.Culture+ "', '" +goalString+ "', '" +heading+ "')";
-            if (firstCreateChartCall == null) { firstCreateChartCall = createChartCall; }
 
-            @goalString
-            <a href="#" onclick="@createChartCall; return false">chart</a>
-            <br />
-        }
-        <table>
-            <tr>
-                <th></th>
-                <th>Clicks</th>
-                <th>Leads</th>
-                <th>Spend</th>
-            </tr>
-        @foreach (var rangesum in offersum.DateRangeSummaries)
+<h3>Dashboard</h3>
+
+<div class="row">
+    <div class="six columns">
+        <div class="panel">
+            <h4>Summary</h4>
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Clicks</th>
+                    <th>Leads</th>
+                    <th>Spend</th>
+                </tr>
+            @foreach (var summary in Model.AdvertiserSummaries)
+            {
+                <tr>
+                    <td>@summary.Name</td>
+                    <td>@String.Format("{0:n0}", summary.Clicks)</td>
+                    <td>@String.Format("{0:n0}", summary.Conversions)</td>
+                    <td>@summary.RevenueFormatted</td>
+                </tr>
+            }
+            </table>
+        </div>
+
+        <div class="panel">
+            <h4>Offers / Goals</h4>
+        @foreach (var offersum in Model.OfferGoalSummaries)
         {
-            <tr>
-                <td>@rangesum.Name</td>
-                <td>@String.Format("{0:n0}", rangesum.Clicks)</td>
-                <td>@String.Format("{0:n0}", rangesum.Conversions)</td>
-                <td>@rangesum.RevenueFormatted</td>
-            </tr>
+            <b>@offersum.Offer.OfferName</b><br />
+            for (var i=0; i < offersum.Goals.Count; i++)
+            {
+                var goal = offersum.Goals[i];
+                var dataLastMonthToDate = goal.ValueFor(offersum.SummaryLMTD);
+                var dataLastMonthTotal = goal.ValueFor(offersum.SummaryLM);
+                var dataThisMonthToDate = goal.ValueFor(offersum.SummaryMTD);
+                var dataGoal = goal.TargetBasedOn(offersum.SummaryLM);
+                var valueFormat = (goal.MetricId == ClientPortal.Web.Models.MetricEnum.Spend ? "C" : "N0");
+                var goalString = "Goal: [" + goal.MetricId + ": " + goal.TargetFormattedBasedOn(offersum.SummaryLM) + "]";
+                var heading = offersum.Offer.OfferName.Replace("'", "");
+                var createChartCall = "CreateChart('" +goal.MetricId+ "', [" +dataLastMonthToDate+ "," +dataLastMonthTotal+ "," +dataThisMonthToDate+ "," +dataGoal+ "], '" +valueFormat+ "', '" +goal.Culture+ "', '" +goalString+ "', '" +heading+ "')";
+                if (firstCreateChartCall == null) { firstCreateChartCall = createChartCall; }
+
+                @goalString
+                <a href="#" onclick="@createChartCall; return false">chart</a>
+                <br />
+            }
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Clicks</th>
+                    <th>Leads</th>
+                    <th>Spend</th>
+                </tr>
+            @foreach (var rangesum in offersum.DateRangeSummaries)
+            {
+                <tr>
+                    <td>@rangesum.Name</td>
+                    <td>@String.Format("{0:n0}", rangesum.Clicks)</td>
+                    <td>@String.Format("{0:n0}", rangesum.Conversions)</td>
+                    <td>@rangesum.RevenueFormatted</td>
+                </tr>
+            }
+            </table>
         }
-        </table>
-    }
+        </div>
     </div>
-    <div class="panel five columns">
+
+    <div class="panel six columns">
     @if (Model.OfferGoalSummaries.Count > 0)
     {
         @Html.Partial("GoalVis", Model.OfferGoalSummaries[0])
